[package]
name = "oblioplib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
flatbuffers = "22.10.26"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"